# dynsoa-adaptive-runtime

./: CONTRIBUTING.md  LICENSE-COMMERCIAL.txt  PATENT-NOTICE.txt  PATENT_NOTICE.txt  README.md  SECURITY.md  dynsoa_sdk_whitepaper.md
dynsoa/: CMakeLists.txt  QUICKSTART.md  README.md  bench.csv  mixed-batch-README.txt
dynsoa/include/dynsoa/: dynsoa.h  dynsoa_export.h  entity_store.h  kernels.h  layout.h  metrics.h  scheduler.h  schema.h  types.h
dynsoa/src/: dynsoa.cpp  entity_store.cpp  kernels.cpp  layout.cpp  metrics.cpp  scheduler.cpp  schema.cpp
dynsoa/tests/: boids_main.cpp  boids_multibackend.cpp  smoke_main.cpp
unity/Assets/DynSoA/Runtime/: DynSoA.cs  DynSoASmoke.cs
